<resources>
    <string name="app_name">Health Link</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="news">Новости</string>
    <string name="profile">Профиль</string>
    <string name="coaches_fragment">Coaches Fragment</string>
    <string name="coaches">Тренеры:</string>
    <string name="fitness_rooms">Фитнес залы</string>
    <string name="news_about_sport">Новости про спорт</string>
    <string name="change">Изменить</string>
    <string name="my_achievements">Личные достижения</string>
    <string name="cycling">Езда на велосипеде</string>
    <string name="running">Бег</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sing_in">Вход</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="don_t_have_an_account_yet">Ещё нет аккаунта?</string>
    <string name="sign_up">Зарегистрируйтесь.</string>
    <string name="registration">Регистрация</string>
    <string name="first_name_last_name">Ваше ФИО</string>
    <string name="your_age">Ваш возраст</string>
    <string name="your_city">Ваш город</string>
    <string name="create_password">Придумайте пароль</string>
    <string name="you_havent_signed_yet">Проверьте логин или пароль.</string>
    <string name="search">Поиск</string>
    <string name="description">Описание</string>
    <string name="about_trainer">About Trainer</string>
    <string name="about_fit_room">About Fit Room</string>
    <string name="gym_name">Gym name</string>
    <string name="fit_room">Тренажерный зал</string>
    <string name="desc">Описание</string>
    <string name="facilities">Удобства</string>
    <string name="entry_w_kid">Можно с ребёнком</string>
    <string name="tv_free_tea">Бесплатный чай</string>
    <string name="tv_free_towels">Бесплатные полотенца</string>
    <string name="tv_music_in_room">Музыка в зале</string>
    <string name="call">Позвонить</string>
    <string name="schedule">Расписание</string>
    <string name="leave_review">Оставить отзыв</string>
    <string name="trainer">Личный тренер</string>
    <string name="write">Написать</string>
    <string name="name">Name</string>
    <string name="update">Обновить</string>
    <string name="load_photo">Загрузить фото</string>
    <string name="publish">publish</string>
    <string name="add_coaches">Add coaches</string>
    <string name="who_added">Who added</string>
    <string name="which_fit_room">Добавьте свой фитнес зал</string>
    <string name="clubs">Клубы:</string>
    <string name="add_coaches_in_fit_room">Добавьте штатных тренеров</string>
    <string name="add_coach">Добавить ещё</string>
    <string name="share">Опубликовать</string>
</resources>