<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.add_content.AddCoachesFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:id="@+id/image_back"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back70" />
        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/add_coaches"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/image_content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/ic_add_administrator100" />

    <Button
        android:id="@+id/btn_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Photo" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/et_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/description"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/et_whichFitRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/which_fit_room"
        android:inputType="textCapSentences" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_publish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish" />

</LinearLayout>