<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.profile.EditProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back70" />

        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="Обновить данные"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_add_administrator100" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FFC107"
        android:text="@string/load_photo"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:cornerRadius="20dp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/first_name_last_name"
        android:layout_margin="10dp"
        android:inputType="textCapSentences"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/et_born"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/your_age"
        android:inputType="textCapSentences"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/et_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/your_city"
        android:layout_margin="10dp"
        android:inputType="textCapSentences"
        android:textColor="@color/black" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="#FFC107"
        android:visibility="gone"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FFC107"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:cornerRadius="20dp" />

</LinearLayout>