<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.AuthFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sing_in"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_input_password"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progress_bar"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#FFC107"
        android:text="@string/sing_in"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:cornerRadius="20dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_password"
        android:layout_centerHorizontal="true"
        android:indeterminateTint="#FFC107"
        android:padding="15dp"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_you_havent_signed_yet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_sign_in"
        android:layout_centerHorizontal="true"
        android:text="@string/you_havent_signed_yet"
        android:textColor="@color/black"
        android:visibility="gone"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_you_havent_signed_yet"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_yet" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:foreground="?attr/selectableItemBackground"
            android:padding="5dp"
            android:text="@string/sign_up"
            android:textColor="#53A8CF"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>