<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sign_up.SignUpFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registration"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_input_age"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="8dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/first_name_last_name"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_input_city"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="8dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/your_age"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_input_email"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="8dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/your_city"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="30dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_email"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="8dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/create_password"
            android:inputType="textPassword"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progress_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FFC107"
        android:text="@string/sing_in"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:cornerRadius="20dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_password"
        android:layout_centerHorizontal="true"
        android:indeterminateTint="#FFC107"
        android:padding="15dp"
        android:visibility="gone"
        tools:visibility="visible" />
</RelativeLayout>